--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.4.0",
     "framer-motion": "^11.0.5",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^3.4.1"
   }
 }
